--- a/addition.html
+++ b/addition.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Addition Result</title>
+    <title>Addition </title>
     <style>
         body {
             display: flex;
