--- a/forward.html
+++ b/forward.html
@@ -10,17 +10,18 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             margin: 0;
             background-color: #4158D0;
             background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
             color: white;
             font-family: 'Comic Sans MS', cursive, sans-serif; 
+         
         }
         h1 {
             margin-bottom: 20px;
         }
         .counting {
+            margin-top: 100px;
             display: flex;
             flex-direction: column;
             align-items: center;
