--- a/backward.html
+++ b/backward.html
@@ -10,7 +10,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            /* height: 100vh; */
             margin: 0;
          
             background-color: #00DBDE;
